2005-01-15  Tom Tromey  <tromey@redhat.com>

	* model/fieldref.cc (resolve): Use current class, not declaring
	class, as implicit qualifier.

2005-01-15  Tom Tromey  <tromey@redhat.com>

	* source/lex.cc (get): Rewrote.
	(get_raw): Don't handle newlines for purposes of location
	updating.

2005-01-15  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (generate): Write local variable table.
	(bytecode_generator): Updated.
	* bytecode/locals.cc (request): Updated.
	(get_index): Likewise.
	(remove): Likewise.
	(update): New method.
	(emit): Likewise.
	* bytecode/generate.hh (bytecode_generator::get_current): New
	method.
	(bytecode_generator::local_variable_table_attribute): New class.
	* bytecode/locals.hh (class locals): More documentation.
	(class temporary_local): Likewise.
	(locals::gen): New field.
	(locals::debug_info): New structure.
	(locals::keep_debug_info): New field.
	(locals::var_descriptions): Likewise.
	(locals): Initialize new fields.
	(locals::indexes): Removed.
	(locals::scope_map): Likewise.
	(locals::update): Declare.
	(locals::emit): Likewise.

2005-01-14  Tom Tromey  <tromey@redhat.com>

	* bytecode/block.cc (clone): Removed.
	* bytecode/block.hh (bytecode_block::clone): Removed.
	* bytecode/generate.cc (emit_saved_cleanup): Rewrote.
	(visit_synchronized): Updated.
	(visit_try): Likewise.
	(finally_creator): Removed.
	(~finally_creator): Likewise.
	(visit_try): Only emit inline cleanups once.
	(generate): Clear 'changed' before updating handlers.
	(any_cleanups_p): Removed.
	(add_exception_handler): Push handlers on back of the list again.
	* bytecode/generate.hh (bytecode_generator::finally_handler):
	Removed start, end, max_stack fields.  Added 'block'
	and 'variable' fields.
	(finally_handler): Updated.
	(bytecode_generator::finally_creator): Removed.
	(bytecode_generator::any_cleanups_p): Likewise.

2005-01-14  Tom Tromey  <tromey@redhat.com>

	* model/field.cc (type): Use const_cast.

2005-01-14  Tom Tromey  <tromey@redhat.com>
