@@ -1,5 +1,11 @@
 2005-01-15  Tom Tromey  <tromey@redhat.com>
 
+	* source/lex.cc (lexer): Updated.
+	(get): Rewrote again.
+	* source/lex.hh (lexer::was_return): New field.
+
+2005-01-15  Tom Tromey  <tromey@redhat.com>
+
 	* model/fieldref.cc (resolve): Use current class, not declaring
 	class, as implicit qualifier.
 
